1.2.x/release-notes/ext-proc-icap-CHANGELOG/index.md
> For AI agents: this documentation is indexed at https://docs.united-security-providers.ch/usp-core-waap/llms.txt, and every page is available as markdown at its own address plus index.md.

# Changelog {#changelog}

*This component/feature is in still active development ("alpha"); it is not recommended to already use it in productive environments.*

## 0.0.10 - 2025-02-07 {#0010-2025-02-07}

### Fixed {#fixed}

- Fix wrong behavior in case of a non-200 status code in encapsulated HTTP response messages

## 0.0.9 - 2025-01-14 {#009-2025-01-14}

### Fixed {#fixed_1}

- Update 3rd party libs to close known vulnerabilities

## 0.0.8 - 2024-12-11 {#008-2024-12-11}

### Fixed {#fixed_2}

- Allow to set additional command line options view CLI_ARGS environment variable

## 0.0.7 - 2024-11-26 {#007-2024-11-26}

### Fixed {#fixed_3}

- Fix an issue on sending end-chunk terminator in preview mode

## 0.0.6 - 2024-11-19 {#006-2024-11-19}

### Changed {#changed}

- First alpha release
